# rd_spiral

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  setup_git.sh
configs/: pattern_decay.txt  stable_spiral.txt  turbulent_spiral.txt
examples/: compare_spiral_behaviors.py  simple_run.py  turbulent_spiral_README.md
rd_spiral/: __init__.py  cli.py
rd_spiral/core/: __init__.py  config.py  integration.py  io.py  solver.py  spatial.py
tests/: test_basic.py
