[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rd_spiral"
version = "0.1.0"
description = "Simple reaction-diffusion spiral wave solver using spectral methods"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sandy Herho", email = "sandy.herho@email.ucr.edu"},
]
keywords = ["reaction-diffusion", "spiral-waves", "pde", "spectral-methods"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "xarray>=0.19.0",
    "netCDF4>=1.5.7",
]

[project.urls]
Homepage = "https://github.com/sandyherho/rd_spiral"
Repository = "https://github.com/sandyherho/rd_spiral"
Issues = "https://github.com/sandyherho/rd_spiral/issues"

[project.scripts]
rd-spiral = "rd_spiral.cli:main"

[tool.setuptools]
packages = ["rd_spiral", "rd_spiral.core", "rd_spiral.utils"]
include-package-data = true

[tool.setuptools.package-data]
rd_spiral = ["configs/*.txt"]
