[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rd-spiral"
version = "0.1.0"
description = "Reaction-diffusion spiral wave solver using pseudo-spectral methods"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Sandy Herho", email = "sandy.herho@email.ucr.edu"}]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "xarray>=0.19.0",
    "netCDF4>=1.5.7",
]

[project.scripts]
rd-spiral = "rd_spiral.cli:main"
