[metadata]
name = rd_spiral
author = Sandy Herho
author_email = sandy.herho@email.ucr.edu
description = High-performance reaction-diffusion spiral wave solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandyherho/rd_spiral
project_urls =
    Bug Tracker = https://github.com/sandyherho/rd_spiral/issues
    Documentation = https://rd-spiral.readthedocs.io
    Source Code = https://github.com/sandyherho/rd_spiral
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.20.0
    scipy >= 1.7.0
    pandas >= 1.3.0
    xarray >= 0.19.0
    netCDF4 >= 1.5.7

[options.extras_require]
dev =
    pytest >= 6.0
    pytest-cov >= 2.0
    black >= 22.0
    flake8 >= 4.0
    mypy >= 0.900
    pre-commit >= 2.0
    sphinx >= 4.0
    sphinx-rtd-theme >= 1.0
    matplotlib >= 3.0
viz =
    matplotlib >= 3.0
    seaborn >= 0.11
    plotly >= 5.0
all =
    %(dev)s
    %(viz)s

[options.entry_points]
console_scripts =
    rd-spiral = rd_spiral.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=rd_spiral --cov-report=html --cov-report=term

[coverage:run]
source = rd_spiral
omit = 
    */tests/*
    */examples/*
    setup.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
